# greek-finlit-agent

./: .coverage  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DOCKER.md  Dockerfile  ONBOARDING.md  PROJECT_STRUCTURE.md  README.md  README_UPDATE_SUMMARY.md  REFACTORING_COMPARISON.md  REFACTORING_NOTES.md  REFACTORING_SUMMARY.md  app.py  docker-compose.yml  env.example  main.py  pyproject.toml  test.py  test_big3.py
.github/workflows/: tests.yml
docs/: CHANGES.md
examples/: examples.py
scripts/: models.py  quickstart.py  run_agent.sh  setup.py
src/: __init__.py
src/finlit_agent/: __init__.py  agent.py  database.py  literacy_assessment.py  main.py
src/finlit_agent/agent/: __init__.py  core.py
src/finlit_agent/agents/: loan_classifier.py
src/finlit_agent/config/: __init__.py  settings.py
src/finlit_agent/prompts/: templates.py
src/finlit_agent/schemas/: responses.py
src/finlit_agent/services/: __init__.py  affordability_service.py  amortization_service.py  financial_calculator_service.py  loan_comparison_service.py  loan_information_service.py  loan_plan_generator_service.py  visualization_data_service.py
src/finlit_agent/tools/: __init__.py
src/finlit_agent/ui/: README.md  __init__.py  assessment_ui.py  chat_ui.py  config.py  loan_visualization_ui.py  path_selection_ui.py  responsible_borrowing_ui.py  session_state.py
src/finlit_agent/utils/: __init__.py  ollama.py
tests/: README.md  __init__.py  conftest.py  test_agent.py  test_config.py  test_literacy_assessment.py  test_setup.py
tests/services/: __init__.py  test_affordability_service.py  test_amortization_service.py  test_financial_calculator_service.py  test_loan_comparison_service.py  test_loan_information_service.py  test_loan_plan_generator_service.py  test_visualization_data_service.py
tests/ui/: __init__.py  test_assessment_ui.py  test_chat_ui.py  test_config.py  test_path_selection_ui.py  test_responsible_borrowing_ui.py  test_session_state.py
