[project]
name = "greek-finlit-agent"
version = "0.1.0"
description = "A financial literacy agent for Greek households."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-google-genai>=2.0.10",
    "python-dotenv>=1.0.0",
    "streamlit>=1.39.0",
    "watchdog>=6.0.0",
]
